k8s/librarian2.yaml
apiVersion: v1
kind: Service
metadata:
  name: librarian2
  namespace: librarian2
  labels:
    app: librarian2
spec:
  ports:
    - name: http
      port: 8443
      targetPort: 8443
  selector:
    app: librarian2
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librarian2
  namespace: librarian2
  labels:
    app: librarian2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librarian2
  template:
    metadata:
      labels:
        app: librarian2
    spec:
      securityContext:
        supplementalGroups: [112]
      nodeSelector: 
        kubernetes.io/hostname: ubuntu-cloud
      containers:
        - name: librarian2
          image: 192.168.8.4:17001/quarkus/librarian2-jvm:1.1
          imagePullPolicy: Always
          volumeMounts:
            # name must match the volume name below
            - name: tls-certificate
              mountPath: /etc/tls-certificate
              readOnly: true
            - name: book-data
              mountPath: /data    
              readOnly: true          
          ports:
            - name: http
              containerPort: 8443
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
      volumes:
        - name: tls-certificate
          secret:
            secretName: librarian2-certificate-tls   
        - name: book-data
          hostPath: 
            path: /home/lsv/Downloads/transmission/
            type: Directory
