k8s/lgtm-ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lgtm-ingress-grpc
  namespace: otel
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"    
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
    - host: otel-exporter-grpc.192.168.8.4.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lgtm
                port:
                  number: 4317
